# cpp-battle-test-server

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Game/: Event.hpp  Game.cpp  Game.hpp  ICommandExecutionTarget.hpp  IUpdateContext.hpp  InputCommand.hpp  InputCommandImpl.hpp  InputCommandImpls.cpp  Map.cpp  Map.hpp  MapObject.cpp  MapObject.hpp  MapObjectBuilder.cpp  MapObjectBuilder.hpp  MapObjectConfig.hpp  PropertyChecker.hpp
src/Game/Component/: AgilityComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  IComponent.hpp  MeleeAttackComponent.cpp  MeleeAttackComponent.hpp  MovableComponent.cpp  MovableComponent.hpp  OccupyingComponent.hpp  RangeAttackComponent.cpp  RangeAttackComponent.hpp  RangeComponent.hpp  StrengthComponent.hpp
src/Game/Geometry/: Rect.hpp  Utils.cpp
src/Game/InputCommands/: ExecuteInputCommand.cpp  ExecuteInputCommand.hpp
src/Game/MapObjectTasks/: MapObjectTask.cpp  MapObjectTask.hpp  MarchTask.cpp  MarchTask.hpp  MeleeAttackTask.cpp  MeleeAttackTask.hpp  RangeAttackTask.cpp  RangeAttackTask.hpp  TaskUtils.cpp  TaskUtils.hpp
src/Game/MapObjects/: MapObject.cpp  MapObject.hpp  MapObjectBuilder.cpp  MapObjectBuilder.hpp
src/Game/MapObjects/Types/: Hunter.cpp  Hunter.hpp  Swordsman.cpp  Swordsman.hpp
src/Game/Utils/: AttackUtils.cpp  AttackUtils.hpp  GeometryUtils.cpp  GeometryUtils.hpp  OccupyUtils.cpp  OccupyUtils.hpp  Point.hpp
src/IO/System/: EventLog.hpp
tests/: CMakeLists.txt  tests_Game.cpp  tests_Geometry.cpp  tests_Map.cpp  tests_MapObject.cpp
